karnc/tests/fixtures/negative/171_float_overflow/input.karn
commons bad {
  fn f() -> Float {
    1e999
  }
}
